--- a/EasyAdo.SqlServer/EasyAdo.SqlServer.csproj
+++ b/EasyAdo.SqlServer/EasyAdo.SqlServer.csproj
@@ -2,7 +2,19 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <PackageId>EasyAdoForSqlServer</PackageId>
+    <Description>Abstração gerenciadora de conexão com banco de dados SqlServer.</Description>
+    <PackageIcon>Icon.png</PackageIcon>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\Icon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
